# Serma

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  improvements.txt
.github/workflows/: docker.yml  release.yml
src/: cleanup.rs  config.rs  enrich.rs  index.rs  ingest.rs  main.rs  socks5.rs  spider.rs  storage.rs  web.rs
